--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
       <div class="op">
-        <p>And don’t forget to follow <a style="color:rgba(112, 112, 206, 0.823); cursor:pointer;">@starkfinance</a> on Twitter</p>
+        <p>And don’t forget to follow <a style="color:rgba(112, 112, 206, 0.823); cursor:pointer;" href="https://twitter.com/stark_finance">@stark_finance</a> on Twitter</p>
       </div>
     </div>
 
